--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,8 +13,8 @@
 # ===============================
 
 spring.datasource.url= jdbc:postgresql://localhost:5432/devweb_institucional
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.username=usuario
+spring.datasource.password=senha
 spring.datasource.validationQuery = SELECT 1
 
 #____________________________________________________________________________________________________#
@@ -60,8 +60,8 @@ spring.queries.roles-query=select u.email, r.role from seg_usuario u inner join 
 # ==============================================================
 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=abraao.cs@gmail.com
-spring.mail.password=1bcv1acs
+spring.mail.username=usuario@gmail.com
+spring.mail.password=senha
 spring.mail.port=587
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
