--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,66 +1,39 @@
 # ===============================
+# = PROFILE: Selecão de config. Desenvolvimento, teste ou Produção - "prod", "test" ou "dev"
+
+spring.profiles.active=dev
+
+# ===============================
 # = DATA SOURCE: Produção no heroku - DB PostgreSQL
-# ===============================
 
-#spring.datasource.url=${DATABASE_URL}
-#spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.validationQuery = SELECT 1
-
-#____________________________________________________________________________________________________#
-
-# ===============================
-# = DATA SOURCE: Configuração Local - DB PostgreSQL
-# ===============================
-
-spring.datasource.url= jdbc:postgresql://localhost:5432/devweb_institucional
-spring.datasource.username=usuario
-spring.datasource.password=senha
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.validationQuery = SELECT 1
-
-#____________________________________________________________________________________________________#
-
-# ===============================
-# = DATA SOURCE: Configuração Local - DB MySQL
-# ===============================
-#spring.datasource.url = jdbc:mysql://localhost:3306/spring-security-tutorial
-#spring.datasource.username = root
-#spring.datasource.password = root
-#spring.datasource.testWhileIdle = true
-#spring.datasource.validationQuery = SELECT 1
 
 # ===============================
 # = JPA / HIBERNATE
-# ===============================
-spring.jpa.show-sql = true
-#utilizar apenas no primeiro deploy pra gerar o banco de dados
-#spring.jpa.generate-ddl=true
 
-#Opçoes: create-drop / update
+spring.jpa.show-sql = false
 spring.jpa.hibernate.ddl-auto = update
-#spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL94Dialect
-
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL94Dialect
 
 # ===============================
 # = Thymeleaf configurations
-# ===============================
+
 spring.thymeleaf.mode=HTML
 spring.thymeleaf.cache=false
 
 # ==============================================================
 # = Spring Security / Queries for AuthenticationManagerBuilder  
-# ==============================================================
 
 spring.queries.users-query=select email, password, ativo from seg_usuario where email=?
 spring.queries.roles-query=select u.email, r.role from seg_usuario u inner join seg_usuario_role ur on(u.id_usuario=ur.id_usuario) inner join seg_role r on(ur.id_role=r.id_role) where u.email=?
 
 # ==============================================================
 # = Configuração de E-envio de email: Gmail  
-# ==============================================================
 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=usuario@gmail.com
+spring.mail.username=email@gmail.com
 spring.mail.password=senha
 spring.mail.port=587
 spring.mail.protocol=smtp
@@ -69,7 +42,7 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
 spring.mail.properties.mail.smtp.quitwait=false 
 
-# DEVTOOLS (DevToolsProperties)
+# ==============================================================
+# = DEVTOOLS (DevToolsProperties)
 
-#Qualquer alteração no HTML página atualiza automaticamente
-spring.devtools.livereload.enabled=true
+spring.devtools.livereload.enabled=false
