--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -34,7 +34,7 @@ spring.jpa.show-sql = true
 
 #utilizar opção 'create' apenas no primeiro deploy pra gerar o banco de dados e executar o import.sql e depois deixar em 'update'
 #Opçoes: create / create-drop / update
-spring.jpa.hibernate.ddl-auto = create
+spring.jpa.hibernate.ddl-auto = create-drop
 #spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL94Dialect
@@ -58,7 +58,7 @@ spring.queries.roles-query=select u.email, r.role from seg_usuario u inner join 
 # ==============================================================
 
 spring.mail.host=smtp.gmail.com
-spring.mail.username=email@gmail.com
+spring.mail.username=usuario@gmail.com
 spring.mail.password=senha
 spring.mail.port=587
 spring.mail.protocol=smtp
