--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 # ===============================
 # = PROFILE: Selecão de config. Desenvolvimento, teste ou Produção - "prod", "test" ou "dev"
 
-spring.profiles.active=dev
+spring.profiles.active=prod
 
 # ===============================
 # = DATA SOURCE: Produção no heroku - DB PostgreSQL
@@ -14,7 +14,7 @@ spring.datasource.validationQuery = SELECT 1
 # = JPA / HIBERNATE
 
 spring.jpa.show-sql = false
-spring.jpa.hibernate.ddl-auto = update
+spring.jpa.hibernate.ddl-auto = none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQL94Dialect
 
 # ===============================
